<resources>
    <string name="app_name">SHARE</string>

    <string name="signinup">SIGN IN  |  SIGN UP</string>
    <string name="login_google">LOGIN WITH GOOGLE</string>
    <string name="login_facebook">LOGIN WITH FACEBOOK</string>
    <string name="not_login">DON\'T WANT TO LOGIN?</string>
    <string name="skip">SKIP</string>

    <string name="name">Name</string>
    <string name="email">Email id</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="apply">APPLY</string>

    <string name="share">SHARE</string>
    <string name="next">NEXT</string>

    <string name="feedback">FEEDBACK</string>
    <string name="feedback_email">Please enter your email id</string>
    <string name="feedback_content">Please give us your feedback</string>
    <string name="send">SEND</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity__splashscreen">Activity_Splashscreen</string>
</resources>
