<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sprihabiswas.share.sb.Activity_Login"
    android:background="@drawable/login_background"
    android:id="@+id/loginscreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/login_heading_size"
        android:textColor="@color/login_heading"
        android:id="@+id/tv_login_heading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_heading_margin" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_skip"
        >
        <Button
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/login_button_height"
            android:text="@string/signinup"
            android:onClick="call_signinup"
            android:textSize="@dimen/login_button_text_size"
            android:background="@drawable/login_screen_button"
            android:id="@+id/button_signin"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/login_button_height"
            android:text="@string/login_google"
            android:textSize="@dimen/login_button_text_size"
            android:textColor="@color/login_google"
            android:background="@drawable/login_screen_button"
            android:id="@+id/button_google"
            android:layout_gravity="center_horizontal"
            android:drawableEnd="@drawable/rsz_google"
            android:drawableRight="@drawable/rsz_google"
            android:layout_marginTop="@dimen/login_button_margin"/>

        <Button
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/login_button_height"
            android:text="@string/login_facebook"
            android:background="@drawable/login_screen_button"
            android:textColor="@color/login_facebook"
            android:textSize="@dimen/login_button_text_size"
            android:id="@+id/button_facebook"
            android:layout_gravity="center_horizontal"
            android:drawableEnd="@drawable/rsz_facebook"
            android:drawableRight="@drawable/rsz_facebook"
            android:layout_marginTop="@dimen/login_button_margin"
            />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/ll_skip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_login"
            android:id="@+id/tv_skip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:id="@+id/button_skip"
            android:onClick="skip_signinup"
            android:background="#00ffffff" />

    </LinearLayout>




</RelativeLayout>
